# spp-contract-testing

./: .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml  setup.py
spp_contract_testing/: __init__.py  contract.py  eventbridge.py  sqs.py
spp_contract_testing/schemas/: __init__.py  log_context.py
tests/: conftest.py  test_contract.py  test_eventbridge.py  test_sqs.py
tests/schemas/: test_log_context.py
