[tool.poetry]
name = "spp-contract-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
schema = "^0.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest-lazy-fixture = "^0.6.3"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
